--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql2": "^3.14.1",
     "next": "15.3.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
