--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "lucide-react": "^0.513.0",
     "mysql2": "^3.14.1",
     "next": "15.3.3",
