--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "reset-monthly": "tsx scripts/resetMonthlyCounters.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
